# TestRail_MCP

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  Dockerfile  LICENSE  README.md  docker-compose.yml  instructions.md  pyproject.toml
.github/workflows/: publish.yml
prompts/: import_bdd_scenarios.md  sample_bdd_scenarios.feature  use_testrail_bdd_template.md
scripts/: setup_mcp.py  verify_phase2.py  verify_phase4.py
scripts/phase_verification/: TestRail_MCP_phases.md  verify_phase3.py  verify_phase5.py  verify_phase6.py  verify_phase7.py
src/testrail_mcp/: __main__.py  client.py  config.py  parsers.py  prompt_templates.py  server.py
src/testrail_mcp/tools/: __init__.py  cases.py  importer.py  milestones.py  plans.py  projects.py  results.py  runs.py  sections.py  suites.py  workflows.py
tests/: TEST_COVERAGE.md  test_parsers.py  test_workflows.py
